--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <header class="jumbotron">
-        <div class="page-heading text-center">
-            <h1>Welcome to the quiz game</h1>
-        </div>
-    </header>
+</header>
     <div id="question-container" class="container">
         
     </div>
     <div id="result">
+        fhdkjhfgkdf
     </div>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/
 js.cookie.min.js"></script>
