--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
     </div>
     <div id="result">
-        Demo
+        Demo 2
     </div>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/
 js.cookie.min.js"></script>
